# CFD_SCRACTH

./: 2dvof.py  CFD_1D-CONDUCTION.ipynb  CFD_2D-CONDUCTION.ipynb  CFD_2D-CONVECTION.ipynb  CFD_2D-DUCTFLOW.ipynb  CFD_2D-NATURAL-CONVECTION.ipynb  PLIC_VOF.f  README.md  THEORY.md  T_REF.txt  common.h  cont  flow_visualization.py  hello.ipynb  julia_test.ipynb  main  main.cpp  out  out_T  out_U  out_V  outd_T  stream  sub.cpp  tmp.ipynb
cfd_common/: pyproject.toml
cfd_common/cfd_common/: __init__.py  domain.py  init.py  tdma.py
ref/: common.h  main  main.cpp  out_p  out_x  out_y  sub.cpp
